unpackaged/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>This custom object is used to track automation errors for better visibility, reporting and insights.</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>