unpackaged/main/default/objects/Error_Log__c/fields/Automation_Name__c.field-meta.xml
<CustomField>
    <fullName>Automation_Name__c</fullName>
    <inlineHelpText>Stores the name of the failing automation</inlineHelpText>
    <label>Automation Name</label>
    <length>244</length>
    <type>Text</type>
</CustomField>