unpackaged/main/default/objects/Error_Log__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <inlineHelpText>Additional detail re the failure</inlineHelpText>
    <label>Detail</label>
    <type>TextArea</type>
</CustomField>