unpackaged/main/default/objects/Error_Log__c/fields/Fault_Message__c.field-meta.xml
<CustomField>
    <fullName>Fault_Message__c</fullName>
    <inlineHelpText>Stores error message generated by the automation</inlineHelpText>
    <label>Fault Message</label>
    <length>244</length>
    <type>Text</type>
</CustomField>