unpackaged/main/default/objects/Error_Log__c/fields/From_For_EmailMessages__c.field-meta.xml
<CustomField>
    <fullName>From_For_EmailMessages__c</fullName>
    <description>Field to capture email address for the incoming email that was part of the errored flow</description>
    <label>From (For EmailMessages)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>