unpackaged/main/default/objects/Error_Log__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <inlineHelpText>Stores the id of the failing that started the flow</inlineHelpText>
    <label>Record</label>
    <length>18</length>
    <type>Text</type>
</CustomField>