unpackaged/main/default/objects/Error_Log__c/fields/Record_Information__c.field-meta.xml
<CustomField>
    <fullName>Record_Information__c</fullName>
    <description>Detail of the record that is being lost due to an error in the flow, i.e. incoming email.</description>
    <label>Record Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>